--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ runtimeLivedata = "1.6.8"
 identityJvm = "202408.1"
 places = "3.5.0"
 glance = "1.1.0"
+firebaseCrashlyticsBuildtools = "3.0.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,6 +50,7 @@ androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtim
 identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
 places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 androidx-glance = { group = "androidx.glance", name = "glance", version.ref = "glance" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
