Adding Image Capture

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.7.0"
+cameraCore = "1.3.4"
 coilCompose = "2.4.0"
 gradle = "8.5.2"
 itext7Core = "7.1.17"
@@ -27,9 +28,15 @@ identityJvm = "202408.1"
 places = "4.0.0"
 glance = "1.1.0"
 firebaseCrashlyticsBuildtools = "3.0.2"
+textRecognition = "16.0.1"
 ui = "1.7.3"
+firebaseStorageKtx = "21.0.1"
 
 [libraries]
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCore" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraCore" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraCore" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraCore" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
@@ -62,7 +69,9 @@ pdfbox = { module = "org.apache.pdfbox:pdfbox", version.ref = "pdfbox" }
 places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 androidx-glance = { group = "androidx.glance", name = "glance", version.ref = "glance" }
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
+text-recognition = { module = "com.google.mlkit:text-recognition", version.ref = "textRecognition" }
 ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
+firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
