--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
 agp = "8.7.0"
+cameraCamera2 = "1.1.0-alpha11"
 cameraCore = "1.3.4"
+cameraLifecycle = "1.1.0-alpha11"
+cameraView = "1.0.0-alpha31"
 coilCompose = "2.4.0"
 gradle = "8.5.2"
 itext7Core = "7.1.17"
@@ -31,15 +34,21 @@ firebaseCrashlyticsBuildtools = "3.0.2"
 textRecognition = "16.0.1"
 ui = "1.7.3"
 firebaseStorageKtx = "21.0.1"
+uiVersion = "1.0.5"
 
 [libraries]
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCore" }
+androidx-camera-camera2-v110alpha11 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCamera2" }
 androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraCore" }
 androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraCore" }
+androidx-camera-lifecycle-v110alpha11 = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraLifecycle" }
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraCore" }
+androidx-camera-view-v100alpha31 = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
+androidx-ui-v105 = { module = "androidx.compose.ui:ui", version.ref = "uiVersion" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+google-firebase-storage-ktx = { module = "com.google.firebase:firebase-storage-ktx" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 itext7-core = { module = "com.itextpdf:itext7-core", version.ref = "itext7Core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
